2004-11-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/combocellrenderer.hg: The model is a TreeModel, not a 
	Pixbuf.
	* gtk/gtkmm/cellrenderer_generation.[h|cc]: Remove the TreeModel/Combo 
	specialization, because the Combo is not for representing or editing 
	a TreeModel - it's just to use a TreeModel to present choices for 
	a text column.
	* examples/book/treeview/combo_renderer/examplewindow.[h|cc]: This 
	now works.

2004-11-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/messagedialog.hg: Reverted set_message() implementation 
	change and added set_secondary_text().
	* gtk/src/dialog.hg: Added alternative_button_order().
	* gtk/src/: Added comboboxcombo.[hg|ccg] and comboboxprogress.[hg|ccg].
	* gtk/gtkmm/cellrenderer_generation.[h|cc]: Add template 
	specializations to create a CellRendererCombo when the model is of 
	type TreeModel.
	* pango/src/context.hg: Added get_font_map().
	* examples/book/treeview/: Added combo_renderer example - does not 
	actually work yet.

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus/popup/examplewindow.[h|cc]: Use the popup 
	UIManager node type, so that this example works.
	* docs/tutorial/gtkmm-tut.xml: Update the popup menu section.

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* Removed gtkmm.spec.in and mention of it in configure.in and 
	Makefile.am, yet again. There is no point in having a broken spec 
	file that nobody is maintaining. spec files are distro-specific and 
	belong with distros.

2004-10-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
	Do not return before actually copying the value.
	* examples/book/treeview/: Added filter_modify example, to show the 
	use of set_modify_func().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.hg: Regenerated with h2defs.py.
	* gtk/src/window.hg: Added drag_dest_add_text_targets(), 