@@ -1,3 +1,8 @@
+2004-11-08  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/treeview/combo_renderer/examplewindow.[h|cc]: Use a 
+	combo model from the treeview model, now that it works in GTK+.
+
 2004-11-07  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/combocellrenderer.hg: The model is a TreeModel, not a 
